testsuite/tests/typecheck/should_compile/FD1.stderr

FD1.hs:16:1: error:
    Couldn't match expected type ‘Int -> Int’ with actual type ‘a’
    ‘a’ is a rigid type variable bound by
      the type signature for:
        plus :: forall a. E a (Int -> Int) => Int -> a
      at FD1.hs:15:9
    Relevant bindings include plus :: Int -> a (bound at FD1.hs:16:1)
    The equation(s) for ‘plus’ have two arguments,
    but its type ‘Int -> a’ has only one
